    
    dir                 --the directory where the file is currently stored
    relative_dir        --like dir but relative to root_path
    
    store_dir           --The directory where files are permanently stored
    relative_store_dir  --the same but relative to root_dir
    
    tmp_dir             --The directory where tempfiles are stored
    relative_tmp_dir    --you can work this out yourself
    
As you can see, this is now actually consistent, with all the relative paths relative to the same directory (err... wow?) and a consistent naming convention.

* In related news: you can now pass a Proc to the :store_dir and :tmp_dir options. The default options are now also procs, instead of being some kind of arcane super-exception like before. The procs will be passed to arguments, first the current model instance and the name of the upload column as the second.

* The :accumulate option was removed from :old_files. I really liked it, but it doesn't make sense with th new Proc-based system (it would wipe out data without thinking, thus potentially getting rid of files you want to keep). Use :keep instead or implement some kind of versioning. The new default is :delete. So beware, if you need to keep those files, make sure to change it!

* You can now specify individual versions that should be cropped in image_columns, simply add a 'c' before the string that specifies the size, so you can do:

    image_column :picture, :versions => { :thumb => "100x100", :banner => "c400x200" }
    
Where thumb will be no larger than 100x100 (but might be smaller) and banner will be cropped to 400x200 exactly!

* Furthermore you can pass a Proc instead of a string to an image_column version:

    image_column :picture, :versions => { :thumb => "100x100", :solarized => proc{|img| img.solarize} }

The Proc will be passed an RMagick object, just like process!

* render_image now uses send_file if no block is given for faster performance.